\title{News for Package 'mboost'}

\section{Changes in mboost version 2.5-0 (2015-xx-yy)}{
  \subsection{User-visible changes}{
    \itemize{
      \item Strong speed-up of \code{stabsel.mboost}: We now only compute
      the model on each subsample until \code{q} variables were selected
      (or \code{mstop} is reached)
      \item Better handling of errors in (single) folds of \code{cvrisk}:
      results of folds without errors are used and a \code{warning} is issued.
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item
    }
  }
  \subsection{Bug-fixes}{
    \itemize{
      \item
    }
  }
}

\section{Changes in mboost version 2.4-2 (2014-02-12)}{
  \subsection{User-visible changes}{
    \itemize{
      \item Export \code{df2lambda}, \code{hyper_bbs} and \code{bl_lin}
        to make package \pkg{FDboost} happy. Note: These functions
	usually should not be called directly by users.
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item Added Hothorn et al (2010) to \file{inst/CITATION}
    }
  }
  \subsection{Bug-fixes}{
    \itemize{
      \item Changes in \file{inst/CITATION} to make CRAN happy:
        Citations can now be extracted without the need to install the
        package.
      \item Removed \code{EISPACK = FALSE} from \code{eigen()} as the
        argument is defunct and ignored.
      \item Changed \code{require} to \code{requireNamespace}
    }
  }
}

\section{Changes in mboost version 2.4-1 (2014-12-15)}{
  \subsection{Miscellaneous}{
    \itemize{
      \item Moved generic definition of \code{selected} to \pkg{stabs}
      which is required anyway (thus, \pkg{stabs} >= 0.5-0 is now
      required)
      \item load AML dataset (\file{AML_Bullinger.rda}) from package
      \pkg{TH.data}
      \item Updated references (for stability selection, confidence
      intervals and constrained regression)
      \item fixed \file{inst/CITATION}
      \item Refer to \code{news(package = "mboost")} instead of to the